# MarketingTools

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  MEMORY.md  PERSONAS.md  PLANNING.md  README.md  VISION.md  WORKFLOW.md  mypy.ini  output.md
.githooks/: pre-commit  pre-push
data_science_bot/: ANALYSIS_WORKFLOW.md  BOT_CHARTER.md  COLLABORATION_PROTOCOL.md  DATA_COLLECTION_IMPROVEMENT_PLAYBOOK.md  EXPERIMENT_INSIGHT_GATING_SPEC.md  README.md  (+4 more)
rustBotNetwork/app_core/: Cargo.toml  SPEND_GUARDRAIL_POLICY.md
rustBotNetwork/app_core/docs/: INTELLIGENT_SYSTEM_EXECUTION_PLAN.md  LANDING_EXPERIMENT_SUPPORT_SPEC.md
rustBotNetwork/app_core/examples/: materialize_live_dashboard_exports.rs  purchase_truth_audit_live.rs  subbly_wix_monthly_orders_report.rs  wix_mailchimp_backfill.rs
rustBotNetwork/app_core/src/: analytics_connector_contracts.rs  analytics_data_generator.rs  analytics_data_transformer.rs  analytics_reporter.rs  contracts.rs  dashboard_processor.rs  image_generator.rs  integration_tests.rs  invariants.rs  legacy_adapter.rs  lib.rs  llm_client.rs  persona_loader.rs  pipeline.rs  python_runner.rs
rustBotNetwork/app_core/src/data_models/: analytics.rs  dashboard.rs  design_spec.rs  mod.rs  persona.rs  social_media.rs
rustBotNetwork/app_core/src/subsystems/: mailchimp_backfill.rs  mod.rs
rustBotNetwork/app_core/src/subsystems/agent_graph/: mod.rs
rustBotNetwork/app_core/src/subsystems/artifact_governance/: mod.rs
rustBotNetwork/app_core/src/subsystems/campaign_orchestration/: mod.rs  runtime.rs
rustBotNetwork/app_core/src/subsystems/marketing_data_analysis/: analytics_config.rs  attestation.rs  attestation_policy.rs  budget.rs  connector_factory.rs  connector_v2.rs  contracts.rs  executive_dashboard.rs  experiment_governance.rs  export_audit.rs  ga4_sessions.rs  ingest.rs  longitudinal.rs  mod.rs  persistence.rs  preflight.rs  purchase_truth.rs  service.rs  subbly_wix_report.rs  validators.rs
rustBotNetwork/app_core/src/subsystems/provider_platform/: mod.rs  model_routing.rs  spend_policy.rs
rustBotNetwork/app_core/src/subsystems/review_and_compliance/: mod.rs
rustBotNetwork/app_core/src/subsystems/text_intelligence/: mod.rs
rustBotNetwork/app_core/src/tools/: base_tool.rs  code_verifier.rs  competitive_analysis.rs  css_analyzer.rs  data_validator.rs  data_viz.rs  echo_tool.rs  email_sender_tool.rs  event_calendar_tool.rs  facebook_adapter.rs  generation_budget_manager.rs  gif_generator_tool.rs  google_ads_adapter.rs  html_bundler.rs  human_feedback_tool.rs  image_generation.rs  image_manipulation_tool.rs  marketing_platform_manager.rs  memory_retrieval.rs  mod.rs  product_crawler.rs  screenshot_tool.rs  seo_analyzer.rs  tool_audit.rs  tool_definition.rs  tool_registry.rs  video_generator_tool.rs
rustBotNetwork/app_core/src/utils/: agent_definition_loader.rs  logger.rs  mod.rs  scheduled_task_registry.rs
rustBotNetwork/app_core/test_data/: mock_google_ads_rows.json
rustBotNetwork/cli/: Cargo.toml
rustBotNetwork/cli/src/: main.rs
(+350 files in other folders)
