[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["kv", "kv_unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] } # "serde" feature for serialization
thread_local = "1.1" # For thread-local storage similar to threading.local
once_cell = "1.18" # For lazy static initialization
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }
url = "2.5"
sha2 = "0.10"
itertools = "0.12"
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.13"
regex = "1.5"
markdown = "0.3"
base64 = "0.22"
playwright = "0.0.12"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
gemini-client-api = "7.2.3" # Updated to a valid version
dotenv = "0.15"
image = "0.24" # For image processing
tempfile = "3.8" # For creating temporary files




[dev-dependencies]
http = "0.2"
httptest = "0.16.4"
tempfile = "3.24.0"
