# rustBotNetwork/cli/Cargo.toml
[package]
name = "rbn_cli" # Renamed to rbn_cli to avoid conflict with potential module 'cli'
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../app_core" } # Dependency on the app_core crate
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } # Added tokio dependency
# Add other dependencies as needed for file system operations, etc.
# For example, for std::fs operations, no extra dependency is needed.
